// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text demo examples Snapshots: alignment 1`] = `
.emotion-0 {
  box-sizing: border-box;
  color: #333840;
  font-family: "Open Sans",-apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 14px;
  line-height: 1.5;
  outline: 0;
  -moz-osx-font-smoothing: auto;
  -webkit-font-smoothing: antialiased;
  text-align: right;
  margin-bottom: 1em;
  margin-top: 0;
}

.emotion-0 *,
.emotion-0 *::before,
.emotion-0 *::after {
  box-sizing: inherit;
}

.emotion-1 {
  box-sizing: border-box;
  color: #333840;
  font-family: "Open Sans",-apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 14px;
  line-height: 1.5;
  outline: 0;
  -moz-osx-font-smoothing: auto;
  -webkit-font-smoothing: antialiased;
  text-align: center;
  margin-bottom: 1em;
  margin-top: 0;
}

.emotion-1 *,
.emotion-1 *::before,
.emotion-1 *::after {
  box-sizing: inherit;
}

.emotion-2 {
  box-sizing: border-box;
  color: #333840;
  font-family: "Open Sans",-apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 14px;
  line-height: 1.5;
  outline: 0;
  -moz-osx-font-smoothing: auto;
  -webkit-font-smoothing: antialiased;
  text-align: justify;
  margin-bottom: 1em;
  margin-top: 0;
}

.emotion-2 *,
.emotion-2 *::before,
.emotion-2 *::after {
  box-sizing: inherit;
}

<div>
  <Text
    align="end"
    appearance="p"
    element="p"
  >
    <TextProvider
      align="end"
      appearance="p"
      element="p"
    >
      <Styled(p)
        align="end"
        appearance="p"
        element="p"
      >
        <p
          className="emotion-0"
        >
          Align End
        </p>
      </Styled(p)>
    </TextProvider>
  </Text>
  <Text
    align="center"
    appearance="p"
    element="p"
  >
    <TextProvider
      align="center"
      appearance="p"
      element="p"
    >
      <Styled(p)
        align="center"
        appearance="p"
        element="p"
      >
        <p
          className="emotion-1"
        >
          Align Center
        </p>
      </Styled(p)>
    </TextProvider>
  </Text>
  <Text
    align="justify"
    appearance="p"
    element="p"
  >
    <TextProvider
      align="justify"
      appearance="p"
      element="p"
    >
      <Styled(p)
        align="justify"
        appearance="p"
        element="p"
      >
        <p
          className="emotion-2"
        >
          Align Justify: justified text should stretch the width of the container for each separate line. This example contains words of many lengths to display that lines are justified correctly. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur mattis luctus nunc, in posuere odio viverra et. Quisque aliquam tincidunt ante ac mollis. Vestibulum et massa eget velit ultricies feugiat non non augue. Nulla nisl augue, ullamcorper ac dui.
        </p>
      </Styled(p)>
    </TextProvider>
  </Text>
</div>
`;

exports[`Text demo examples Snapshots: appearance 1`] = `
.emotion-0 {
  box-sizing: border-box;
  color: #58606e;
  font-family: "Open Sans",-apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 22px;
  line-height: 1.25;
  outline: 0;
  -moz-osx-font-smoothing: auto;
  -webkit-font-smoothing: antialiased;
  font-weight: 700;
  margin-bottom: 0.5em;
  margin-top: 0;
}

.emotion-0 *,
.emotion-0 *::before,
.emotion-0 *::after {
  box-sizing: inherit;
}

.emotion-1 {
  box-sizing: border-box;
  color: #333840;
  font-family: "Open Sans",-apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 16px;
  line-height: 1.5;
  outline: 0;
  -moz-osx-font-smoothing: auto;
  -webkit-font-smoothing: antialiased;
  margin-bottom: 1em;
  margin-top: 0;
}

.emotion-1 *,
.emotion-1 *::before,
.emotion-1 *::after {
  box-sizing: inherit;
}

.emotion-2 {
  box-sizing: border-box;
  color: #58606e;
  font-family: "Open Sans",-apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 11px;
  line-height: 1.5;
  outline: 0;
  -moz-osx-font-smoothing: auto;
  -webkit-font-smoothing: antialiased;
  margin-bottom: 1em;
  margin-top: 0;
}

.emotion-2 *,
.emotion-2 *::before,
.emotion-2 *::after {
  box-sizing: inherit;
}

<div>
  <Text
    appearance="h3"
    element="h1"
  >
    <TextProvider
      appearance="h3"
      element="h1"
    >
      <Styled(h1)
        appearance="h3"
        element="h1"
      >
        <h1
          className="emotion-0"
        >
          Heading 1 which looks like a Heading 3
        </h1>
      </Styled(h1)>
    </TextProvider>
  </Text>
  <Text
    appearance="prose"
    element="p"
  >
    <TextProvider
      appearance="prose"
      element="p"
    >
      <Styled(p)
        appearance="prose"
        element="p"
      >
        <p
          className="emotion-1"
        >
          Prose (Long Form) Paragraph. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque molestie eros at nisl rhoncus, et condimentum dui elementum. Praesent gravida metus at scelerisque ultrices.
        </p>
      </Styled(p)>
    </TextProvider>
  </Text>
  <Text
    appearance="mouse"
    element="p"
  >
    <TextProvider
      appearance="mouse"
      element="p"
    >
      <Styled(p)
        appearance="mouse"
        element="p"
      >
        <p
          className="emotion-2"
        >
          Mousetype Paragraph. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque molestie eros at nisl rhoncus, et condimentum dui elementum. Praesent gravida metus at scelerisque ultrices. Suspendisse at facilisis massa. Integer eleifend eleifend nibh posuere interdum.
        </p>
      </Styled(p)>
    </TextProvider>
  </Text>
</div>
`;

exports[`Text demo examples Snapshots: basic 1`] = `
.emotion-1 {
  box-sizing: border-box;
  color: #333840;
  font-family: "Open Sans",-apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 14px;
  line-height: 1.5;
  outline: 0;
  -moz-osx-font-smoothing: auto;
  -webkit-font-smoothing: antialiased;
  margin-bottom: 1em;
  margin-top: 0;
}

.emotion-1 *,
.emotion-1 *::before,
.emotion-1 *::after {
  box-sizing: inherit;
}

.emotion-0 {
  fill: currentcolor;
  font-size: 16px;
  height: 1.25em;
  width: 1.25em;
}

<Text
  appearance="p"
  element="p"
>
  <TextProvider
    appearance="p"
    element="p"
  >
    <Styled(p)
      appearance="p"
      element="p"
    >
      <p
        className="emotion-1"
      >
        Lorem ipsum 
        <IconCloud
          size="large"
        >
          <Icon
            rtl={false}
            size="large"
          >
            <Styled(svg)
              aria-hidden={true}
              focusable="false"
              role="img"
              rtl={false}
              size="large"
              viewBox="0 0 24 24"
            >
              <svg
                aria-hidden={true}
                className="emotion-0"
                focusable="false"
                role="img"
                viewBox="0 0 24 24"
              >
                <g>
                  <path
                    d="M19.35 10.04A7.49 7.49 0 0 0 12 4C9.11 4 6.6 5.64 5.35 8.04A5.994 5.994 0 0 0 0 14c0 3.31 2.69 6 6 6h13c2.76 0 5-2.24 5-5 0-2.64-2.05-4.78-4.65-4.96z"
                  />
                </g>
              </svg>
            </Styled(svg)>
          </Icon>
        </IconCloud>
         dolor sit amet, consectetur adipiscing elit. Sed non purus id dolor maximus eleifend nec in nunc. Integer quis lacinia leo, in suscipit orci. Donec enim augue, vehicula vel enim a, vestibulum tempus nunc.
      </p>
    </Styled(p)>
  </TextProvider>
</Text>
`;

exports[`Text demo examples Snapshots: color 1`] = `
.emotion-0 {
  box-sizing: border-box;
  color: #2a854e;
  font-family: "Open Sans",-apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 14px;
  line-height: 1.5;
  outline: 0;
  -moz-osx-font-smoothing: auto;
  -webkit-font-smoothing: antialiased;
  margin-bottom: 1em;
  margin-top: 0;
}

.emotion-0 *,
.emotion-0 *::before,
.emotion-0 *::after {
  box-sizing: inherit;
}

.emotion-1 {
  box-sizing: border-box;
  color: #d6246e;
  font-family: "Open Sans",-apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 14px;
  line-height: 1.5;
  outline: 0;
  -moz-osx-font-smoothing: auto;
  -webkit-font-smoothing: antialiased;
  margin-bottom: 1em;
  margin-top: 0;
}

.emotion-1 *,
.emotion-1 *::before,
.emotion-1 *::after {
  box-sizing: inherit;
}

.emotion-3 {
  background-color: #421429;
  padding: 0.5em;
}

.emotion-2 {
  box-sizing: border-box;
  color: #bfe7d4;
  font-family: "Open Sans",-apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 14px;
  line-height: 1.5;
  outline: 0;
  -moz-osx-font-smoothing: auto;
  -webkit-font-smoothing: antialiased;
  margin-bottom: 0;
  margin-top: 0;
}

.emotion-2 *,
.emotion-2 *::before,
.emotion-2 *::after {
  box-sizing: inherit;
}

<div>
  <Text
    appearance="p"
    color="#2a854e"
    element="p"
  >
    <TextProvider
      appearance="p"
      color="#2a854e"
      element="p"
    >
      <Styled(p)
        appearance="p"
        color="#2a854e"
        element="p"
      >
        <p
          className="emotion-0"
        >
          Success Text
        </p>
      </Styled(p)>
    </TextProvider>
  </Text>
  <Text
    appearance="p"
    color="#d6246e"
    element="p"
  >
    <TextProvider
      appearance="p"
      color="#d6246e"
      element="p"
    >
      <Styled(p)
        appearance="p"
        color="#d6246e"
        element="p"
      >
        <p
          className="emotion-1"
        >
          Magenta Text
        </p>
      </Styled(p)>
    </TextProvider>
  </Text>
  <Styled(div)
    backgroundColor="#421429"
  >
    <div
      className="emotion-3"
    >
      <Text
        appearance="p"
        color="#bfe7d4"
        element="p"
        noMargins={true}
      >
        <TextProvider
          appearance="p"
          color="#bfe7d4"
          element="p"
          noMargins={true}
        >
          <Styled(p)
            appearance="p"
            color="#bfe7d4"
            element="p"
            noMargins={true}
          >
            <p
              className="emotion-2"
            >
              Custom Text
            </p>
          </Styled(p)>
        </TextProvider>
      </Text>
    </div>
  </Styled(div)>
</div>
`;

exports[`Text demo examples Snapshots: font-weight 1`] = `
.emotion-0 {
  box-sizing: border-box;
  color: #333840;
  font-family: "Open Sans",-apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 14px;
  line-height: 1.5;
  outline: 0;
  -moz-osx-font-smoothing: auto;
  -webkit-font-smoothing: antialiased;
  font-weight: 600;
  margin-bottom: 1em;
  margin-top: 0;
}

.emotion-0 *,
.emotion-0 *::before,
.emotion-0 *::after {
  box-sizing: inherit;
}

.emotion-1 {
  box-sizing: border-box;
  color: #333840;
  font-family: "Open Sans",-apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 14px;
  line-height: 1.5;
  outline: 0;
  -moz-osx-font-smoothing: auto;
  -webkit-font-smoothing: antialiased;
  font-weight: 700;
  margin-bottom: 1em;
  margin-top: 0;
}

.emotion-1 *,
.emotion-1 *::before,
.emotion-1 *::after {
  box-sizing: inherit;
}

.emotion-2 {
  box-sizing: border-box;
  color: #333840;
  font-family: "Open Sans",-apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 14px;
  line-height: 1.5;
  outline: 0;
  -moz-osx-font-smoothing: auto;
  -webkit-font-smoothing: antialiased;
  font-weight: 800;
  margin-bottom: 1em;
  margin-top: 0;
}

.emotion-2 *,
.emotion-2 *::before,
.emotion-2 *::after {
  box-sizing: inherit;
}

.emotion-3 {
  box-sizing: border-box;
  color: #333840;
  font-family: "Open Sans",-apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 14px;
  line-height: 1.5;
  outline: 0;
  -moz-osx-font-smoothing: auto;
  -webkit-font-smoothing: antialiased;
  font-weight: 300;
  margin-bottom: 1em;
  margin-top: 0;
}

.emotion-3 *,
.emotion-3 *::before,
.emotion-3 *::after {
  box-sizing: inherit;
}

<div>
  <Text
    appearance="p"
    element="p"
    fontWeight="semiBold"
  >
    <TextProvider
      appearance="p"
      element="p"
      fontWeight="semiBold"
    >
      <Styled(p)
        appearance="p"
        element="p"
        fontWeight="semiBold"
      >
        <p
          className="emotion-0"
        >
          Semi-bold Text
        </p>
      </Styled(p)>
    </TextProvider>
  </Text>
  <Text
    appearance="p"
    element="p"
    fontWeight="bold"
  >
    <TextProvider
      appearance="p"
      element="p"
      fontWeight="bold"
    >
      <Styled(p)
        appearance="p"
        element="p"
        fontWeight="bold"
      >
        <p
          className="emotion-1"
        >
          Bold Text
        </p>
      </Styled(p)>
    </TextProvider>
  </Text>
  <Text
    appearance="p"
    element="p"
    fontWeight="extraBold"
  >
    <TextProvider
      appearance="p"
      element="p"
      fontWeight="extraBold"
    >
      <Styled(p)
        appearance="p"
        element="p"
        fontWeight="extraBold"
      >
        <p
          className="emotion-2"
        >
          Extra-bold Text
        </p>
      </Styled(p)>
    </TextProvider>
  </Text>
  <Text
    appearance="p"
    element="p"
    fontWeight={300}
  >
    <TextProvider
      appearance="p"
      element="p"
      fontWeight={300}
    >
      <Styled(p)
        appearance="p"
        element="p"
        fontWeight={300}
      >
        <p
          className="emotion-3"
        >
          Light Text
        </p>
      </Styled(p)>
    </TextProvider>
  </Text>
</div>
`;

exports[`Text demo examples Snapshots: headings 1`] = `
.emotion-0 {
  box-sizing: border-box;
  color: #333840;
  font-family: "Open Sans",-apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 34px;
  line-height: 1.25;
  outline: 0;
  -moz-osx-font-smoothing: auto;
  -webkit-font-smoothing: antialiased;
  font-weight: 800;
  margin-bottom: 0.5em;
  margin-top: 0;
}

.emotion-0 *,
.emotion-0 *::before,
.emotion-0 *::after {
  box-sizing: inherit;
}

.emotion-1 {
  box-sizing: border-box;
  color: #58606e;
  font-family: "Open Sans",-apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 28px;
  line-height: 1.25;
  outline: 0;
  -moz-osx-font-smoothing: auto;
  -webkit-font-smoothing: antialiased;
  font-weight: 700;
  margin-bottom: 0.5em;
  margin-top: 0;
}

.emotion-1 *,
.emotion-1 *::before,
.emotion-1 *::after {
  box-sizing: inherit;
}

.emotion-2 {
  box-sizing: border-box;
  color: #58606e;
  font-family: "Open Sans",-apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 22px;
  line-height: 1.25;
  outline: 0;
  -moz-osx-font-smoothing: auto;
  -webkit-font-smoothing: antialiased;
  font-weight: 700;
  margin-bottom: 0.5em;
  margin-top: 0;
}

.emotion-2 *,
.emotion-2 *::before,
.emotion-2 *::after {
  box-sizing: inherit;
}

.emotion-3 {
  box-sizing: border-box;
  color: #58606e;
  font-family: "Open Sans",-apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 18px;
  line-height: 1.25;
  outline: 0;
  -moz-osx-font-smoothing: auto;
  -webkit-font-smoothing: antialiased;
  font-weight: 700;
  margin-bottom: 0.5em;
  margin-top: 0;
}

.emotion-3 *,
.emotion-3 *::before,
.emotion-3 *::after {
  box-sizing: inherit;
}

.emotion-4 {
  box-sizing: border-box;
  color: #333840;
  font-family: "Open Sans",-apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 14px;
  outline: 0;
  -moz-osx-font-smoothing: auto;
  -webkit-font-smoothing: antialiased;
  font-weight: 700;
  margin-bottom: 0.5em;
  margin-top: 0;
}

.emotion-4 *,
.emotion-4 *::before,
.emotion-4 *::after {
  box-sizing: inherit;
}

.emotion-5 {
  box-sizing: border-box;
  color: #58606e;
  font-family: "Open Sans",-apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 14px;
  outline: 0;
  -moz-osx-font-smoothing: auto;
  -webkit-font-smoothing: antialiased;
  font-weight: 400;
  margin-bottom: 0.5em;
  margin-top: 0;
}

.emotion-5 *,
.emotion-5 *::before,
.emotion-5 *::after {
  box-sizing: inherit;
}

<div>
  <Text
    appearance="p"
    element="h1"
  >
    <TextProvider
      appearance="p"
      element="h1"
    >
      <Styled(h1)
        appearance="p"
        element="h1"
      >
        <h1
          className="emotion-0"
        >
          Heading 1
        </h1>
      </Styled(h1)>
    </TextProvider>
  </Text>
  <Text
    appearance="p"
    element="h2"
  >
    <TextProvider
      appearance="p"
      element="h2"
    >
      <Styled(h2)
        appearance="p"
        element="h2"
      >
        <h2
          className="emotion-1"
        >
          Heading 2
        </h2>
      </Styled(h2)>
    </TextProvider>
  </Text>
  <Text
    appearance="p"
    element="h3"
  >
    <TextProvider
      appearance="p"
      element="h3"
    >
      <Styled(h3)
        appearance="p"
        element="h3"
      >
        <h3
          className="emotion-2"
        >
          Heading 3
        </h3>
      </Styled(h3)>
    </TextProvider>
  </Text>
  <Text
    appearance="p"
    element="h4"
  >
    <TextProvider
      appearance="p"
      element="h4"
    >
      <Styled(h4)
        appearance="p"
        element="h4"
      >
        <h4
          className="emotion-3"
        >
          Heading 4
        </h4>
      </Styled(h4)>
    </TextProvider>
  </Text>
  <Text
    appearance="p"
    element="h5"
  >
    <TextProvider
      appearance="p"
      element="h5"
    >
      <Styled(h5)
        appearance="p"
        element="h5"
      >
        <h5
          className="emotion-4"
        >
          Heading 5
        </h5>
      </Styled(h5)>
    </TextProvider>
  </Text>
  <Text
    appearance="p"
    element="h6"
  >
    <TextProvider
      appearance="p"
      element="h6"
    >
      <Styled(h6)
        appearance="p"
        element="h6"
      >
        <h6
          className="emotion-5"
        >
          Heading 6
        </h6>
      </Styled(h6)>
    </TextProvider>
  </Text>
</div>
`;

exports[`Text demo examples Snapshots: margin 1`] = `
.emotion-0 {
  box-sizing: border-box;
  color: #333840;
  font-family: "Open Sans",-apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 34px;
  line-height: 1.25;
  outline: 0;
  -moz-osx-font-smoothing: auto;
  -webkit-font-smoothing: antialiased;
  font-weight: 800;
  margin-bottom: 0;
  margin-top: 0;
}

.emotion-0 *,
.emotion-0 *::before,
.emotion-0 *::after {
  box-sizing: inherit;
}

<Text
  appearance="p"
  element="h1"
  noMargins={true}
>
  <TextProvider
    appearance="p"
    element="h1"
    noMargins={true}
  >
    <Styled(h1)
      appearance="p"
      element="h1"
      noMargins={true}
    >
      <h1
        className="emotion-0"
      >
        Heading 1
      </h1>
    </Styled(h1)>
  </TextProvider>
</Text>
`;

exports[`Text demo examples Snapshots: nested 1`] = `
.emotion-15 {
  box-sizing: border-box;
  color: #333840;
  font-family: "Open Sans",-apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 16px;
  line-height: 1.25;
  outline: 0;
  -moz-osx-font-smoothing: auto;
  -webkit-font-smoothing: antialiased;
}

.emotion-15 *,
.emotion-15 *::before,
.emotion-15 *::after {
  box-sizing: inherit;
}

.emotion-14 {
  box-sizing: border-box;
  color: #333840;
  font-family: "Open Sans",-apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 16px;
  line-height: 1.25;
  outline: 0;
  -moz-osx-font-smoothing: auto;
  -webkit-font-smoothing: antialiased;
}

.emotion-14[class] > * {
  margin-bottom: 1em;
}

.emotion-14 *,
.emotion-14 *::before,
.emotion-14 *::after {
  box-sizing: inherit;
}

.emotion-4 {
  background-color: #e8f4fa;
  color: #064d70;
  font-family: serif;
  font-size: 1.25rem;
  padding: 0.5em;
}

.emotion-1 {
  background-color: #dcdcfc;
  padding: 0.5em;
}

.emotion-0 {
  margin-bottom: 0;
  margin-top: 0;
  background-color: #dcdcfc;
  padding: 0.5em;
}

.emotion-5 {
  box-sizing: border-box;
  color: #333840;
  font-family: "Open Sans",-apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 14px;
  line-height: 1.5;
  outline: 0;
  -moz-osx-font-smoothing: auto;
  -webkit-font-smoothing: antialiased;
  margin-bottom: 0;
  margin-top: 0;
  background-color: #dcdcfc;
  padding: 0.5em;
}

.emotion-5 *,
.emotion-5 *::before,
.emotion-5 *::after {
  box-sizing: inherit;
}

<Component>
  <Styled(StyledDemoLayout)>
    <StyledDemoLayout
      className="emotion-15"
    >
      <DemoLayout
        className="emotion-15"
        includeLastChild={true}
        marginBottom="1em"
      >
        <Styled(div)
          className="emotion-15"
          includeLastChild={true}
          marginBottom="1em"
        >
          <div
            className="emotion-14"
          >
            For non-nested Text components, you can opt 
            <em>
              in
            </em>
             to style inheritance by passing true to the inherit prop. 
            <Styled(div)>
              <div
                className="emotion-4"
              >
                This is a non-nested div with custom styles. 
                <withProps(Styled(Text))
                  inherit={true}
                >
                  <Styled(Text)
                    appearance="p"
                    element="p"
                    inherit={true}
                    noMargins={true}
                  >
                    <Text
                      appearance="p"
                      className="emotion-1"
                      element="p"
                      inherit={true}
                      noMargins={true}
                    >
                      <TextProvider
                        appearance="p"
                        className="emotion-1"
                        element="p"
                        inherit={true}
                        noMargins={true}
                      >
                        <Styled(p)
                          appearance="p"
                          className="emotion-1"
                          element="p"
                          inherit={true}
                          noMargins={true}
                        >
                          <p
                            className="emotion-0"
                          >
                            This non-nested Text has opted in to inheriting those custom styles.
                          </p>
                        </Styled(p)>
                      </TextProvider>
                    </Text>
                  </Styled(Text)>
                </withProps(Styled(Text))>
              </div>
            </Styled(div)>
            <withProps(Styled(Text))
              element="div"
            >
              <Styled(Text)
                appearance="p"
                element="div"
                noMargins={true}
              >
                <Text
                  appearance="p"
                  className="emotion-1"
                  element="div"
                  noMargins={true}
                >
                  <TextProvider
                    appearance="p"
                    className="emotion-1"
                    element="div"
                    noMargins={true}
                  >
                    <Styled(div)
                      appearance="p"
                      className="emotion-1"
                      element="div"
                      noMargins={true}
                    >
                      <div
                        className="emotion-5"
                      >
                        For nested Text components (inside another Text), you can opt 
                        <em>
                          out
                        </em>
                         of style inheritance by passing false to the inherit prop. 
                        <Styled(div)>
                          <div
                            className="emotion-4"
                          >
                            This is a nested div with custom styles. 
                            <withProps(Styled(Text))
                              inherit={false}
                            >
                              <Styled(Text)
                                appearance="p"
                                element="p"
                                inherit={false}
                                noMargins={true}
                              >
                                <Text
                                  appearance="p"
                                  className="emotion-1"
                                  element="p"
                                  inherit={false}
                                  noMargins={true}
                                >
                                  <TextProvider
                                    appearance="p"
                                    className="emotion-1"
                                    element="p"
                                    inherit={false}
                                    noMargins={true}
                                    parentElement="div"
                                  >
                                    <Styled(p)
                                      appearance="p"
                                      className="emotion-1"
                                      element="p"
                                      inherit={false}
                                      noMargins={true}
                                    >
                                      <p
                                        className="emotion-5"
                                      >
                                        This nested Text has opted out of inheriting those custom styles.
                                      </p>
                                    </Styled(p)>
                                  </TextProvider>
                                </Text>
                              </Styled(Text)>
                            </withProps(Styled(Text))>
                          </div>
                        </Styled(div)>
                      </div>
                    </Styled(div)>
                  </TextProvider>
                </Text>
              </Styled(Text)>
            </withProps(Styled(Text))>
          </div>
        </Styled(div)>
      </DemoLayout>
    </StyledDemoLayout>
  </Styled(StyledDemoLayout)>
</Component>
`;

exports[`Text demo examples Snapshots: nested-elements 1`] = `
.emotion-6 {
  box-sizing: border-box;
  color: #333840;
  font-family: "Open Sans",-apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 16px;
  line-height: 1.5;
  outline: 0;
  -moz-osx-font-smoothing: auto;
  -webkit-font-smoothing: antialiased;
  margin-bottom: 1em;
  margin-top: 0;
}

.emotion-6 *,
.emotion-6 *::before,
.emotion-6 *::after {
  box-sizing: inherit;
}

.emotion-0 {
  margin-bottom: 0;
  margin-top: 0;
}

.emotion-1 {
  margin-bottom: 0;
  margin-top: 0;
  font-family: "SF Mono","Droid Sans Mono","Source Code Pro",Monaco,Consolas,"Courier New",Courier,monospace;
}

.emotion-5 {
  color: #3272d9;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-5:hover {
  color: #5691f0;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-5:focus {
  color: #3272d9;
  outline: 1px solid #1d5bbf;
  outline-offset: 2px;
}

.emotion-5:active {
  color: #1d5bbf;
}

<div>
  <Text
    appearance="prose"
    element="p"
  >
    <TextProvider
      appearance="prose"
      element="p"
    >
      <Styled(p)
        appearance="prose"
        element="p"
      >
        <p
          className="emotion-6"
        >
          This 
          <Text
            appearance="p"
            element="strong"
          >
            <TextProvider
              appearance="p"
              element="strong"
              inherit={true}
              parentElement="p"
            >
              <Styled(strong)
                appearance="p"
                element="strong"
                inherit={true}
              >
                <strong
                  className="emotion-0"
                >
                  strong text
                </strong>
              </Styled(strong)>
            </TextProvider>
          </Text>
           is in a 
          <Text
            appearance="p"
            element="code"
          >
            <TextProvider
              appearance="p"
              element="code"
              inherit={true}
              parentElement="p"
            >
              <Styled(code)
                appearance="p"
                element="code"
                inherit={true}
              >
                <code
                  className="emotion-1"
                >
                  paragraph
                </code>
              </Styled(code)>
            </TextProvider>
          </Text>
          . 
          <Text
            appearance="p"
            element="p"
          >
            <TextProvider
              appearance="p"
              element="p"
              inherit={true}
              parentElement="p"
            >
              <Styled(span)
                appearance="p"
                element="p"
                inherit={true}
              >
                <span
                  className="emotion-0"
                >
                  This 
                  <Text
                    appearance="p"
                    element="p"
                  >
                    <TextProvider
                      appearance="p"
                      element="p"
                      inherit={true}
                      parentElement="p"
                    >
                      <Styled(span)
                        appearance="p"
                        element="p"
                        inherit={true}
                      >
                        <span
                          className="emotion-0"
                        >
                          span text
                        </span>
                      </Styled(span)>
                    </TextProvider>
                  </Text>
                   is in a span
                </span>
              </Styled(span)>
            </TextProvider>
          </Text>
          This text is in a paragraph. 
          <Link
            element="a"
            href="http://example.com"
          >
            <Link
              element="a"
              href="http://example.com"
            >
              <a
                className="emotion-5"
                href="http://example.com"
              >
                <Text
                  appearance="p"
                  element="p"
                >
                  <TextProvider
                    appearance="p"
                    element="p"
                    inherit={true}
                    parentElement="p"
                  >
                    <Styled(span)
                      appearance="p"
                      element="p"
                      inherit={true}
                    >
                      <span
                        className="emotion-0"
                      >
                        This link has a span inside
                      </span>
                    </Styled(span)>
                  </TextProvider>
                </Text>
              </a>
            </Link>
          </Link>
        </p>
      </Styled(p)>
    </TextProvider>
  </Text>
  <hr />
  <Text
    appearance="prose"
    element="div"
  >
    <TextProvider
      appearance="prose"
      element="div"
    >
      <Styled(div)
        appearance="prose"
        element="div"
      >
        <div
          className="emotion-6"
        >
          This text is in a div 
          <Text
            appearance="p"
            element="p"
          >
            <TextProvider
              appearance="p"
              element="p"
              inherit={true}
              parentElement="div"
            >
              <Styled(p)
                appearance="p"
                element="p"
                inherit={true}
              >
                <p
                  className="emotion-0"
                >
                  This 
                  <Text
                    appearance="p"
                    element="p"
                  >
                    <TextProvider
                      appearance="p"
                      element="p"
                      inherit={true}
                      parentElement="p"
                    >
                      <Styled(span)
                        appearance="p"
                        element="p"
                        inherit={true}
                      >
                        <span
                          className="emotion-0"
                        >
                          span text
                        </span>
                      </Styled(span)>
                    </TextProvider>
                  </Text>
                   is in a paragraph
                </p>
              </Styled(p)>
            </TextProvider>
          </Text>
        </div>
      </Styled(div)>
    </TextProvider>
  </Text>
</div>
`;

exports[`Text demo examples Snapshots: rtl 1`] = `
.emotion-0 {
  box-sizing: border-box;
  color: #333840;
  font-family: "Open Sans",-apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 14px;
  line-height: 1.5;
  outline: 0;
  -moz-osx-font-smoothing: auto;
  -webkit-font-smoothing: antialiased;
  margin-bottom: 1em;
  margin-top: 0;
}

.emotion-0 *,
.emotion-0 *::before,
.emotion-0 *::after {
  box-sizing: inherit;
}

.emotion-1 {
  box-sizing: border-box;
  color: #333840;
  font-family: "Open Sans",-apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 14px;
  line-height: 1.5;
  outline: 0;
  -moz-osx-font-smoothing: auto;
  -webkit-font-smoothing: antialiased;
  text-align: left;
  margin-bottom: 1em;
  margin-top: 0;
}

.emotion-1 *,
.emotion-1 *::before,
.emotion-1 *::after {
  box-sizing: inherit;
}

<div
  dir="rtl"
>
  <ThemeProvider>
    <ThemeProvider>
      <div>
        <Text
          appearance="p"
          element="p"
        >
          <TextProvider
            appearance="p"
            element="p"
          >
            <Styled(p)
              appearance="p"
              element="p"
            >
              <p
                className="emotion-0"
              >
                محاذاة البداية
              </p>
            </Styled(p)>
          </TextProvider>
        </Text>
        <Text
          align="end"
          appearance="p"
          element="p"
        >
          <TextProvider
            align="end"
            appearance="p"
            element="p"
          >
            <Styled(p)
              align="end"
              appearance="p"
              element="p"
            >
              <p
                className="emotion-1"
              >
                محاذاة النهاية
              </p>
            </Styled(p)>
          </TextProvider>
        </Text>
      </div>
    </ThemeProvider>
  </ThemeProvider>
</div>
`;

exports[`Text demo examples Snapshots: truncate 1`] = `
.emotion-0 {
  box-sizing: border-box;
  color: #333840;
  font-family: "Open Sans",-apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 14px;
  line-height: 1.5;
  outline: 0;
  -moz-osx-font-smoothing: auto;
  -webkit-font-smoothing: antialiased;
  margin-bottom: 1em;
  margin-top: 0;
  max-width: 100%;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  word-wrap: normal;
}

.emotion-0 *,
.emotion-0 *::before,
.emotion-0 *::after {
  box-sizing: inherit;
}

.emotion-1 {
  box-sizing: border-box;
  color: #333840;
  font-family: "Open Sans",-apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 14px;
  line-height: 1.5;
  outline: 0;
  -moz-osx-font-smoothing: auto;
  -webkit-font-smoothing: antialiased;
  margin-bottom: 1em;
  margin-top: 0;
  max-width: 200px;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  word-wrap: normal;
}

.emotion-1 *,
.emotion-1 *::before,
.emotion-1 *::after {
  box-sizing: inherit;
}

.emotion-2 {
  box-sizing: border-box;
  color: #333840;
  font-family: "Open Sans",-apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 14px;
  line-height: 1.5;
  outline: 0;
  -moz-osx-font-smoothing: auto;
  -webkit-font-smoothing: antialiased;
  margin-bottom: 1em;
  margin-top: 0;
  max-width: 50%;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  word-wrap: normal;
}

.emotion-2 *,
.emotion-2 *::before,
.emotion-2 *::after {
  box-sizing: inherit;
}

<div>
  <Text
    appearance="p"
    element="p"
    truncate={true}
  >
    <TextProvider
      appearance="p"
      element="p"
      truncate={true}
    >
      <Styled(p)
        appearance="p"
        element="p"
        truncate={true}
      >
        <p
          className="emotion-0"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non purus id dolor maximus eleifend nec in nunc. Integer quis lacinia leo.
        </p>
      </Styled(p)>
    </TextProvider>
  </Text>
  <Text
    appearance="p"
    element="p"
    truncate={200}
  >
    <TextProvider
      appearance="p"
      element="p"
      truncate={200}
    >
      <Styled(p)
        appearance="p"
        element="p"
        truncate={200}
      >
        <p
          className="emotion-1"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non purus id dolor maximus eleifend nec in nunc. Integer quis lacinia leo.
        </p>
      </Styled(p)>
    </TextProvider>
  </Text>
  <Text
    appearance="p"
    element="p"
    truncate="50%"
  >
    <TextProvider
      appearance="p"
      element="p"
      truncate="50%"
    >
      <Styled(p)
        appearance="p"
        element="p"
        truncate="50%"
      >
        <p
          className="emotion-2"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non purus id dolor maximus eleifend nec in nunc. Integer quis lacinia leo.
        </p>
      </Styled(p)>
    </TextProvider>
  </Text>
</div>
`;
